[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "effspm"
version = "0.1.4"
description = "Prefix‑Projection sequential pattern mining"
authors = [
  { name="yeshu999", email="vootlayeswanth20@gmail.com" }
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = ["pybind11>=2.6"]

[project.urls]
"Homepage" = "https://github.com/yeshu999/effspm"
"Source"   = "https://github.com/yeshu999/effspm"

[tool.setuptools.packages.find]
where = ["."]
include = ["effspm*"]
